version/0.16/_sources/api/solver/_autosummary/settings/inlet_vent.rst.txt
:orphan:

.. _inlet_vent:

inlet_vent
==========

.. autoclass:: ansys.fluent.core.solver.settings_232.inlet_vent.inlet_vent
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`inlet_vent_child <inlet_vent_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`boundary_conditions <boundary_conditions>`       'boundary_conditions' child.

================================================   ================================

